Uploading projects part one

--- a/web/src/pages/index.astro
+++ b/web/src/pages/index.astro
@@ -5,10 +5,10 @@ import { Github, Linkedin } from "lucide-astro";
 import projects from "@/projects.json";
 ---
 
-<Layout title="GosssthDev - Desarrollador Full-Stack">
+<Layout title="Retos Frontend Mentor - Jhuancz (Full Stack Developer)">
 	<div class="w-full max-w-6xl mx-auto py-12 md:py-20">
 		<div class="text-center space-y-4 mb-8">
-			<h1 class="text-3xl md:text-4xl font-bold">GosssthDev</h1>
+			<h1 class="text-3xl md:text-4xl font-bold">Retos Frontend Mentor</h1>
 			<div class="flex items-center justify-center gap-4">
 				<img
 					class="rounded-full w-16 h-16 bg-muted flex items-center justify-center text-2xl"
@@ -17,7 +17,7 @@ import projects from "@/projects.json";
 				/>
 				<div class="text-left">
 					<p class="text-lg font-medium">
-						Hola, soy un desarrollador full-stack
+						Hola, soy jhuancz. Desarrollador Full-Stack
 					</p>
 					<p class="text-muted-foreground text-sm">
 						Especializado en crear soluciones web modernas y
@@ -27,7 +27,7 @@ import projects from "@/projects.json";
 			</div>
 			<div class="flex gap-2 justify-center">
 				<a
-					href="https://github.com/ghossstdev"
+					href="https://github.com/jhuancz"
 					class="flex px-2 items-center justify-center gap-2 rounded-md bg-primary text-primary-foreground text-base font-medium shadow transition-colors hover:bg-primary/90 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50"
 					target="_blank"
 				>
@@ -35,7 +35,7 @@ import projects from "@/projects.json";
 					Github
 				</a>
 				<a
-					href="https://www.linkedin.com/in/juan-david-castro-zambrano-gosssth-dev-955bb9210/"
+					href="https://www.linkedin.com/in/jhuancz/"
 					class="flex p-2 items-center justify-center gap-2 rounded-md border border-input bg-background text-base font-medium shadow-sm transition-colors hover:bg-accent hover:text-accent-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50"
 					target="_blank"
 				>
@@ -43,10 +43,6 @@ import projects from "@/projects.json";
 					Linkedin
 				</a>
 			</div>
-
-			<p class="text-muted-foreground text-lg md:text-xl">
-				Algunos de mis proyectos más destacados.
-			</p>
 		</div>
 		<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 p-2">
 			{projects.map((project) => <Card project={project} />)}
