--- a/web/src/components/Card.astro
+++ b/web/src/components/Card.astro
@@ -29,23 +29,25 @@ const { title, image, description, demoUrl, codeUrl, icons } = project;
 		class='rounded-t-lg object-cover w-full aspect-[16/9]'
 	/>
 	<div class='p-4 space-y-2'>
-		<div class='flex items-center justify-between'>
+		<div class='flex flex-col items-center justify-between'>
+			{
+				icons.length !== 0 ? (
+					<div class='flex self-end gap-2 w-fit items-center whitespace-nowrap rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary-foreground text-secondary-foreground hover:bg-secondary-foreground/80 text-xs'>
+						{icons.map((icon) => (
+							<IconWithUrl name={icon.name} url={icon.url} />
+						))}
+					</div>
+				) : (
+					<br>
+				)
+			}
 			<h3
-				class='whitespace-nowrap text-2xl font-semibold leading-none tracking-tight'
+				class='whitespace-nowrap overflow-hidden text-ellipsis self-start text-2xl font-semibold leading-none tracking-tight max-w-[340px]'
 			>
 				{title}
 			</h3>
-			<div
-				class='flex gap-2 w-fit items-center whitespace-nowrap rounded-full border px-2.5 py-0.5 font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary-foreground text-secondary-foreground hover:bg-secondary-foreground/80 text-xs'
-			>
-				{
-					icons.map((icon) => (
-						<IconWithUrl name={icon.name} url={icon.url} />
-					))
-				}
-			</div>
 		</div>
-		<p class='text-sm text-muted-foreground'>
+		<p class='text-sm text-muted-foreground truncate'>
 			{description}
 		</p>
 		<div class='flex gap-2'>
