--- a/web/src/pages/index.astro
+++ b/web/src/pages/index.astro
@@ -3,17 +3,21 @@ import Card from "@/components/Card.astro";
 import Layout from "@/layouts/Layout.astro";
 import { Github, Linkedin } from "lucide-astro";
 import projects from "@/projects.json";
+import { Image } from "astro:assets";
 ---
 
 <Layout title="Retos Frontend Mentor - Jhuancz (Full Stack Developer)">
 	<div class="w-full max-w-6xl mx-auto py-12 md:py-20">
 		<div class="text-center space-y-4 mb-8">
 			<h1 class="text-3xl md:text-4xl font-bold">Retos Frontend Mentor</h1>
-			<div class="flex items-center justify-center gap-4">
-				<img
+			<div class="flex flex-col md:flex-row items-center justify-center gap-4">
+				<Image
 					class="rounded-full w-16 h-16 bg-muted flex items-center justify-center text-2xl"
 					src="/me.webp"
 					alt="Me"
+					width={64}
+					height={64}
+					loading="eager"
 				/>
 				<div class="text-left">
 					<p class="text-lg font-medium">
