--- a/web/src/pages/index.astro
+++ b/web/src/pages/index.astro
@@ -49,7 +49,10 @@ import { Image } from "astro:assets";
 			</div>
 		</div>
 		<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 p-2">
-			{projects.map((project) => <Card project={project} />)}
+			{projects.map((project) => {
+				// @ts-ignore
+				return <Card project={project} />
+			})}
 		</div>
 	</div>
 </Layout>
